; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_irq.c_acpi_unregister_gsi.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_irq.c_acpi_unregister_gsi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_domain = type { i32 }

@acpi_gsi_domain_id = common dso_local global i32 0, align 4
@DOMAIN_BUS_ANY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @acpi_unregister_gsi(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.irq_domain*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @acpi_gsi_domain_id, align 4
  %6 = load i32, i32* @DOMAIN_BUS_ANY, align 4
  %7 = call %struct.irq_domain* @irq_find_matching_fwnode(i32 %5, i32 %6)
  store %struct.irq_domain* %7, %struct.irq_domain** %3, align 8
  %8 = load %struct.irq_domain*, %struct.irq_domain** %3, align 8
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @irq_find_mapping(%struct.irq_domain* %8, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @irq_dispose_mapping(i32 %11)
  ret void
}

declare dso_local %struct.irq_domain* @irq_find_matching_fwnode(i32, i32) #1

declare dso_local i32 @irq_find_mapping(%struct.irq_domain*, i32) #1

declare dso_local i32 @irq_dispose_mapping(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
